# callcenter-harness

./: .gitignore  INSTALL.md  README.md  pyproject.toml
contracts/: callcenter-newplan-esign.json
docs/: m3-calibration-spec.md  multi-tenant-architecture.md  slice1-foundation-plan.md  slice2-plan.md  slice3-plan.md
docs/implementation-plans/: callcenter-harness-first-slice-plan.md  scorecard-human-render-plan.md
docs/research/: callcenter-harness-inputs-to-gather.md  callcenter-harness-redaction-method-research.coverage-audit.md  callcenter-harness-redaction-method-research.gap-audit.md  callcenter-harness-redaction-method-research.md  callcenter-harness-redaction-method-research.satisfaction-audit.md  callcenter-harness-requirements-foundation.coverage-audit.md  (+5 more)
languages/: bg.json  xx.json
profiles/: a1.json  demo-mock.json
scripts/: cc_command_eval_smoke.py  cc_eval_smoke.py  cc_ingest_smoke.py  cc_pipeline_smoke.py  cc_redact_smoke.py  cc_smoke.py  fixture_role_command.py  judge_ollama.py  scorecard.py  scrub_and_retire.py  seed_landing.sh  setup_airgapped_judge.sh  setup_airgapped_redaction.sh  setup_airgapped_stt.sh  test_cmd_primitives.py  test_config_safety.py  test_dialogue.py  test_engine_upgrades.py  test_gap_checks.py  test_hollow_demo.py  test_hollow_grep.py  test_ner_chunk.py  test_primitives.py  test_recall_checks.py  test_report_model.py  test_rubric.py  test_stt_prompt.py  test_textmatch.py  test_tone_checks.py  transcribe_airgapped.py
workflows/: callcenter-qa.json  ingest.json  noop.json  pipeline.json  redact.json
(+27 files in other folders)
