[project]
name = "cc-harness"
version = "0.0.1"
description = "Call-center QA harness (fork of the United Partners harness engine)."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
